--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^14.0.6",
+    "@angular-devkit/build-angular": "^0.1101.2",
     "@angular/cli": "^14.0.6",
     "@angular/compiler-cli": "^14.0.6",
     "@angular/language-service": "^14.0.6",
@@ -37,7 +37,7 @@
     "@types/jasminewd2": "~2.0.3",
     "@types/jquery": "^3.3.28",
     "@types/node": "~8.9.4",
-    "codelyzer": "^6.0.0",
+    "codelyzer": "^0.0.28",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~6.3.4",
@@ -45,7 +45,7 @@
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
-    "protractor": "~7.0.0",
+    "protractor": "^3.3.0",
     "ts-node": "~7.0.0",
     "typescript": "~4.6.4"
   }
