--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/router": "^19.1.6",
     "@types/angular": "^1.8.9",
     "core-js": "^2.5.4",
+    "moment-timezone": "^0.5.47",
     "rxjs": "~6.6.7",
     "tslib": "^2.0.0",
     "zone.js": "~0.15.0"
